--- a/src/css/responsiveness.css
+++ b/src/css/responsiveness.css
@@ -104,7 +104,7 @@
     }
 
     .dropdown-nav {
-        width: 100vw;
+        width: 100%;
         padding-left: 5px;
     }
 
